//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version: 
Date: 
    Features:
    Fixes:
----------------------------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: May 12th 2025
    Features:
        - When changing the language for Factorio objects, automatically switch to, or download, a font that can
          display that language.
        - All of YAFC can be translated, not just the strings that are used in Factorio.
    Fixes:
        - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
        - When loading duplicate research productivity effects, obey both of them, instead of failing.
        - Fixed a crash when item.weight == 0, related to ultracube.
        - If the requested mod version isn't found, use the latest, like Factorio.
        - Fix amounts loaded from other pages in the legacy summary page.
        - Improved precision for building count calculation.
        - Remove automatic catalyst amount calculations when loading Factorio 2.0 data.
        - Update documentation for changing the selected Factorio-object language.
        - Make it much harder for the user to select a folder when YAFC is expecting a file.
----------------------------------------------------------------------------------------------------------------------
Version: 2.11.1
Date: April 5th 2025
    Fixes:
        - (regression) Fix opening new unnamed files.
        - (.NET 9) Fix page name display in the search-all dropdown.
        - When calculating the required inserters, remember that inserters cannot hold more than one stack.
    Internal changes: