@@ -534,6 +534,8 @@ public class Entity : FactorioObject {
     internal List<Entity> sourceEntities { get; set; } = null!;
     internal string? autoplaceControl { get; set; }
     public float heatingPower { get; internal set; }
+    public int width { get; internal set; }
+    public int height { get; internal set; }
     public int size { get; internal set; }
     internal override FactorioObjectSortOrder sortingOrder => FactorioObjectSortOrder.Entities;
     public override string type => "Entity";
