@@ -345,6 +345,7 @@ prefs-spoiling-rate=Spoiling rate:
 prefs-show-inaccessible-milestone-overlays=Show milestone overlays on inaccessible objects
 prefs-dark-mode=Dark mode
 prefs-autosave=Enable autosave (Saves when the window loses focus)
+prefs-export-entities-with-fuel-filter-set=Export all entities with fuel filter set
 prefs-goods-unit-simple=Simple Amount__1__
 prefs-goods-unit-custom=Custom: 1 unit equals
 prefs-goods-unit-from-belt=Set from belt
@@ -728,6 +729,7 @@ production-table-header-modules=Modules
 production-table-add-raw-recipe=Add raw recipe
 production-table-add-technology=Add technology
 production-table-export-to-blueprint=Export inputs and outputs to blueprint with constant combinators:
+production-table-export-entities-to-blueprint=Export entities to blueprint
 export-blueprint-amount-per=Amount per:
 export-blueprint-amount-per-second=second
 export-blueprint-amount-per-minute=minute
